added project section

--- a/index.html
+++ b/index.html
@@ -196,12 +196,10 @@
 		<h2>Connect</h2>
 	</div>
 	<div class="col-12 social padding">
-		<a href="https://www.facebook.com/devarsh.panchal.5"><i class="fab fa-facebook"></i></a>
-		<a href="https://twitter.com/devarshpanchal"><i class="fab fa-twitter"></i></a>
-		<a href="https://plus.google.com/105080688844174231436"><i class="fab fa-google-plus-g"></i></a>
-		<a href="https://www.instagram.com/devarsh.007/"><i class="fab fa-instagram"></i></a>
-		<a href="https://www.youtube.com/channel/UCr1MJZMFqBcXHS-_e4GJvUA"><i class="fab fa-youtube"></i></a>
-		<a href="https://github.com/letscodedev"><i class="fab fa-github"></i></a>
+		<a href="https://www.facebook.com/rajat.bhatt"><i class="fab fa-facebook"></i></a>
+		<a href="https://twitter.com/Rajatbh43766789"><i class="fab fa-twitter"></i></a>
+		<a href="https://www.instagram.com/rjrajat_bh30/"><i class="fab fa-instagram"></i></a>
+		<a href="https://github.com/rajat-bhatt-au9"><i class="fab fa-github"></i></a>
 	</div>
 </div>
 </div>
